--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap');
+
+@font-face {
+    font-family: "TippyToes";
+    src: local("TippyToesBold"),
+    url("./fonts/TippyToes-Bold.ttf") format("truetype");
+    font-weight: 700;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+    font-family: "TippyToes";
+    src: local("TippyToesXtraBold"),
+    url("./fonts/TippyToes-X-traBold.ttf") format("truetype");
+    font-weight: 800;
+}
+
+:root {
+    --blue: #04F1FF;
+    --light-grey: #5D5D5D;
+    --white: #FFFFFF;
+    --black: #2D2D2D;
+    --dark-grey: #3A3A3A;
+    --grey: #535353;
+    --info: #303435;
+    --years: #303435;
+
+    --regular-font: "Open Sans", sans-serif;
+    --extra-font: "TippyToes";
+}
+
+body {
+    font-family: var(--regular-font);
+    font-weight: 400;
+    color: #5D5D5D;
+    background-color: #202020;
+}
+
+p, h1, h3, h4 {
+    margin: 0;
+}
+
+button {
+    cursor: pointer;
 }
