--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -15,13 +15,19 @@ ul {
 }
 
 .hr {
-    width: 20px;
-    height: 1px;
+    width: 1px;
+    height: 70px;
 
-    margin: 0;
+    margin: 0 40%;
 
-    border: 2px solid #2D2D2D;
+    border: 1px solid #2D2D2D;
     background-color: #2D2D2D;
+}
 
-    transform: rotate(90deg);
+.hidden {
+    display: none;
+}
+
+.active {
+    color: #04F1FF;
 }
