--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -8,9 +8,6 @@
     flex-direction: column;
 }
 
-.images a {
-}
-
 .images img {
     z-index: -1;
     cursor: pointer;
@@ -27,7 +24,7 @@
     justify-content: space-around;
     align-items: center;
 
-    box-shadow: -60px 0px 30px -20px #202020 inset, 60px 0px 30px -20px #202020 inset;
+    box-shadow: -100px 0 30px -20px #202020 inset, 100px 0 30px -20px #202020 inset;
     overflow: hidden;
 
     margin-bottom: 44px;
@@ -42,7 +39,7 @@
 
 .titles, .nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 
     margin-bottom: 22px;
