--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
 }
 
 body {
-    font-family: var(--regular-font);
+    font-family: "Open Sans", sans-serif;;
     font-weight: 400;
     color: #5D5D5D;
     background-color: #202020;
